<resources>
    <string name="app_name">MiniTikTok</string>
    <string name="Tab1">首页</string>
    <string name="Tab2">关注</string>
    <string name="Tab3">+</string>
    <string name="Tab4">消息</string>
    <string name="Tab5">我</string>
    <string name="MessageHead">消息</string>
    <string name="Contact">联系人</string>
    <string name="FS">粉丝</string>
    <string name="Z">赞</string>
    <string name="AT">\@我的</string>
    <string name="PL">评论</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="defaultLocation">获取位置信息失败</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="selectImage">选择图片</string>
    <string name="selectVideo">选择视频</string>
    <string name="postIt">上传</string>
    <string name="postSuccess">上传成功</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_player">FullscreenActivity</string>
</resources>