<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/messageLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#161824"
    tools:context="Message">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="47dp">


            <TextView
                android:id="@+id/messageHead"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="@string/MessageHead"
                android:textColor="#FFFFFF"
                android:gravity="center"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:clickable="true"
                android:text="@string/Contact"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#222430"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="112dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:src="@drawable/bg" />

                <ImageButton
                    android:id="@+id/FSButton"
                    style="@android:style/Widget.ImageButton"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="#00000000"
                    android:scaleType="fitCenter"
                    android:src="@drawable/fs" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/FS"
                    android:textColor="#FFFFFF" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:src="@drawable/bg" />

                <ImageButton
                    android:id="@+id/ZButton"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="#00000000"
                    android:scaleType="fitCenter"
                    android:src="@drawable/z" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/Z"
                    android:textColor="#FFFFFF" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:src="@drawable/bg" />

                <ImageButton
                    android:id="@+id/ATButton"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="#00000000"
                    android:scaleType="fitCenter"
                    android:src="@drawable/at" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/AT"
                    android:textColor="#FFFFFF" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:src="@drawable/bg" />

                <ImageButton
                    android:id="@+id/PLButton"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="#00000000"
                    android:scaleType="fitCenter"
                    android:src="@drawable/pl" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/PL"
                    android:textColor="#FFFFFF" />
            </LinearLayout>

        </LinearLayout>
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:background="#222430"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>